js/js.translator/testData/incremental/invalidation/classWithJsExportAndSuspendFunction/main/m.kt
import kotlin.coroutines.*

fun box(stepId: Int) = "OK"
